# aws-canary-telemetry-grafana

./: .cruft.json  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
src/: grafana_canary.py
src/python/: grafana_canary.py
