[tool.poetry]
name = "aws-canary-telemetry-grafana"
version = "0.1.0"
description = "Canary service to test availability of Grafana"
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]
license = "Apache 2.0"
readme = "README.md"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = "^2.0.0"
bandit = "^1.7.4"
black = "^22.10.0"
cookiecutter = "^2.1.1"
cruft = "^2.11.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
safety = "^2.3.1"
toml = "^0.10.2"
version-incrementor = "^1.5.0"
wheel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
