[tool.poetry]
name = "aws-canary-telemetry-grafana"
version = "0.1.0"
description = "Canary service to test availability of Grafana"
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]
license = "Apache 2.0"
readme = "README.md"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^3.0.0"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
flake8 = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
toml = "*"
version-incrementor = "^1.5.0"
wheel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
